WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188397
REGRESSION(
r234652
): fast/scrolling/rtl-scrollbars-animation-property.html is failing
https://bugs.webkit.org/show_bug.cgi?id=188397
Summary
REGRESSION(r234652): fast/scrolling/rtl-scrollbars-animation-property.html is...
Per Arne Vollan
Reported
2018-08-07 17:46:48 PDT
@@ -1,11 +1,11 @@ -layer at (0,0) size 785x2000 - RenderView at (0,0) size 785x600 -layer at (0,0) size 785x216 - RenderBlock {HTML} at (0,0) size 785x216 - RenderBody {BODY} at (8,8) size 769x200 -layer at (8,8) size 200x200 clip at (23,8) size 185x185 scrollHeight 2000 scrollbarHasRTLLayoutDirection +layer at (0,0) size 800x2000 + RenderView at (0,0) size 800x600 +layer at (0,0) size 800x216 + RenderBlock {HTML} at (0,0) size 800x216 + RenderBody {BODY} at (8,8) size 784x200 +layer at (8,8) size 200x200 scrollHeight 2000 scrollbarHasRTLLayoutDirection RenderBlock (relative positioned) {DIV} at (0,0) size 200x200 -layer at (23,8) size 1x2000 backgroundClip at (23,8) size 185x185 clip at (23,8) size 185x185 - RenderBlock (positioned) {DIV} at (15,0) size 1x2000 +layer at (8,8) size 1x2000 backgroundClip at (8,8) size 200x200 clip at (8,8) size 200x200 + RenderBlock (positioned) {DIV} at (0,0) size 1x2000 layer at (0,0) size 1x2000 RenderBlock (positioned) {DIV} at (0,0) size 1x2000
Attachments
Patch
(1.45 KB, patch)
2018-08-07 17:52 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews200 for win-future
(12.94 MB, application/zip)
2018-08-07 20:32 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2018-08-07 17:52:07 PDT
Created
attachment 346747
[details]
Patch
EWS Watchlist
Comment 2
2018-08-07 20:32:37 PDT
Comment on
attachment 346747
[details]
Patch
Attachment 346747
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8794154
New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html
EWS Watchlist
Comment 3
2018-08-07 20:32:49 PDT
Created
attachment 346754
[details]
Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Ryan Haddad
Comment 4
2018-08-09 11:35:49 PDT
Ping for reviewers.
Tim Horton
Comment 5
2018-08-09 11:47:51 PDT
Comment on
attachment 346747
[details]
Patch Might also want to hit TWKAPI while you're at it?
Per Arne Vollan
Comment 6
2018-08-09 13:15:57 PDT
(In reply to Tim Horton from
comment #5
)
> Comment on
attachment 346747
[details]
> Patch > > Might also want to hit TWKAPI while you're at it?
Thanks for reviewing! I'll create a followup patch for TWKAPI.
WebKit Commit Bot
Comment 7
2018-08-09 13:43:34 PDT
Comment on
attachment 346747
[details]
Patch Clearing flags on attachment: 346747 Committed
r234734
: <
https://trac.webkit.org/changeset/234734
>
WebKit Commit Bot
Comment 8
2018-08-09 13:43:36 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2018-08-09 13:44:26 PDT
<
rdar://problem/43108768
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug