Cherry-pick r234734. rdar://problem/42387347

REGRESSION(r234652): fast/scrolling/rtl-scrollbars-animation-property.html is failing
    https://bugs.webkit.org/show_bug.cgi?id=188397

    Reviewed by Tim Horton.

    After r234652, [NSScroller preferredScrollerStyle] is called in the UI process, and we need to set the same
    user defaults related to scrollbars in the UI process as we do in the WebProcess.

    * WebKitTestRunner/mac/main.mm:
    (setDefaultsToConsistentValuesForTesting):

    Canonical link: https://commits.webkit.org/203547@main
    git-svn-id: http://svn.webkit.org/repository/webkit/trunk@234734 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/202900.162@safari-606.1.36.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-606.1.36.1-branch@234755 268f45cc-cd09-0410-ab3c-d52691b4dbfc